# vscode-template

./: .gitignore  README.md
linux/: .clang-format  .clang-tidy  Makefile
windows/: CMakeLists.txt  Makefile
